Fixed popover z-index

--- a/src/components/CalendarCell.scss
+++ b/src/components/CalendarCell.scss
@@ -60,7 +60,9 @@
 
   .overlay {
     border: thin solid #333;
-    background-color: white;
+    background-color: #CCC;
     border-radius: $border-radius;
+    z-index: 10;
+    position: relative;
   }
 }
